<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A03A9F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/main_page"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/login_btn_signup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/login_txt_signup"/>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/login_txt_login"/>
    </LinearLayout>

</RelativeLayout>